--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.62.8",
     "axios": "^1.7.9",
     "firebase": "^11.1.0",
     "localforage": "^1.10.0",
@@ -19,6 +20,7 @@
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.0",
     "react-toastify": "^11.0.2",
+    "react-waypoint": "^10.3.0",
     "slide": "^1.1.6",
     "sort-by": "^1.2.0",
     "swiper": "^11.1.15"
