--- a/package.json
+++ b/package.json
@@ -40,5 +40,9 @@
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.17",
     "vite": "^6.0.3"
-  }
+  },
+  "description": "## Description The Food Sharing Project aims to reduce food waste by allowing users to share excess food with those in need. The platform connects people who have surplus food with those who can make use of it, promoting a sense of community and sustainability.",
+  "main": "eslint.config.js",
+  "author": "",
+  "license": "ISC"
 }
