--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-waypoint": "^10.3.0",
     "slide": "^1.1.6",
     "sort-by": "^1.2.0",
+    "sweetalert2": "^11.15.10",
     "swiper": "^11.1.15"
   },
   "devDependencies": {
